; ModuleID = '/home/carl/AnghaBench/linux/kernel/irq/extr_irqdomain.c_irq_create_of_mapping.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/irq/extr_irqdomain.c_irq_create_of_mapping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.of_phandle_args = type { i32, i32, i32 }
%struct.irq_fwspec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @irq_create_of_mapping(%struct.of_phandle_args* %0) #0 {
  %2 = alloca %struct.of_phandle_args*, align 8
  %3 = alloca %struct.irq_fwspec, align 4
  store %struct.of_phandle_args* %0, %struct.of_phandle_args** %2, align 8
  %4 = load %struct.of_phandle_args*, %struct.of_phandle_args** %2, align 8
  %5 = getelementptr inbounds %struct.of_phandle_args, %struct.of_phandle_args* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.of_phandle_args*, %struct.of_phandle_args** %2, align 8
  %8 = getelementptr inbounds %struct.of_phandle_args, %struct.of_phandle_args* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.of_phandle_args*, %struct.of_phandle_args** %2, align 8
  %11 = getelementptr inbounds %struct.of_phandle_args, %struct.of_phandle_args* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @of_phandle_args_to_fwspec(i32 %6, i32 %9, i32 %12, %struct.irq_fwspec* %3)
  %14 = call i32 @irq_create_fwspec_mapping(%struct.irq_fwspec* %3)
  ret i32 %14
}

declare dso_local i32 @of_phandle_args_to_fwspec(i32, i32, i32, %struct.irq_fwspec*) #1

declare dso_local i32 @irq_create_fwspec_mapping(%struct.irq_fwspec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
